--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,95 @@
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
+  <title>Milk-Maid</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
 
-  <div class="page-wrap">
-    <h1>Handlebars Tutorial</h1>
-    <div id="pets-container"></div>
+<section id="navSection">
+  <div class="nav-top">
+    <nav class="navbar navbar-dark navbar-expand-md bg-dark">
+      <div class="container-fluid">
+        <a href="#" class="navbar-brand">Milk-Maid</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcol-1">
+          <ul class="nav navbar-nav mx-auto">
+            <li class="nav-item" role="presentation">
+              <a href="#" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="#" class="nav-link">Our Products</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="#" class="nav-link">Why Us?</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="#" class="nav-link">Cart</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="#" class="nav-link">Contact Us</a>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav">
+              <li class="nav-item" role="presentation">
+                  <a class="nav-link" href="#">Shop</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                  <a class="nav-link" href="#">Sign In</a>
+              </li>
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+
+    <div id="carouselcontainer" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselcontainer" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselcontainer" data-slide-to="1"></li>
+          <li data-target="#carouselcontainer" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block carouselImg w-100" src="./Assets/1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block carouselImg w-100" src="./Assets/2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block carouselImg w-100" src="./Assets/3.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselcontainer" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselcontainer" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
   </div>
+</section>
 
+
+  <!-- <div id="pets-container"></div> -->
+  <!-- Scripts TO be Loaded -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="./mainBundle.js"></script>
-
 </body>
+
 </html>
