--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
   <title>Milk-Maid</title>
+  <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -14,7 +15,7 @@
   <div class="nav-top">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark">
       <div class="container-fluid">
-        <a href="#" class="navbar-brand">Milk-Maid</a>
+        <a href="#" class="navbar-brand brand-logo"></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -40,10 +41,10 @@
 
           <ul class="nav navbar-nav">
               <li class="nav-item" role="presentation">
-                  <a class="nav-link" href="#">Shop</a>
+                  <a class="nav-link" href="#"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a>
               </li>
               <li class="nav-item" role="presentation">
-                  <a class="nav-link" href="#">Sign In</a>
+                  <a class="nav-link" href="#"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i></a>
               </li>
           </ul>
         </div>
