--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block carouselImg w-100" src="./Assets/1.jpg" alt="First slide">
+            <img class="d-block carouselImg w-100" width="100%" height="100%" src="./Assets/1.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block carouselImg w-100" src="./Assets/2.jpg" alt="Second slide">
+            <img class="d-block carouselImg w-100" width="100%" height="100%" src="./Assets/2.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block carouselImg w-100" src="./Assets/3.jpg" alt="Third slide">
+            <img class="d-block carouselImg w-100" width="100%" height="100%" src="./Assets/3.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselcontainer" role="button" data-slide="prev">
@@ -79,6 +79,24 @@
       </div>
   </div>
 </section>
+
+<section id="main-content-area">
+    <div id="masterPane" class="container-fluid">
+        <div id="milk">
+            <p>MILK</p>
+        </div>
+        <div id="butter">
+            <p>BUTTER</p>
+        </div>
+        <div id="curd">
+            <p>CURD</p>
+        </div>
+        <div id="paneer">
+            <p>PANEER</p>
+        </div>
+    </div>
+</section>
+
 
 
   <!-- <div id="pets-container"></div> -->
