--- a/public/index.html
+++ b/public/index.html
@@ -123,88 +123,7 @@
     
       <div class="col-sm-9 detail-container">
         <div class="detail-pane text-center">
-
-            <div class="card-deck">
-                <div class="card">
-                  <img class="card-img-top" src="./Assets/milk.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Mother Dairy Milk</h5>
-                    <span class="price">
-                      <i class="fa fa-inr" aria-hidden="true"></i>
-                      <span class="card-text"></span>20</span>
-                  </div>
-                  <div class="card-footer">
-                    <div class="row">
-                      <div class="col-sm-6 text-center card-quant-col">
-                        <span>
-                          <i class="fa fa-plus" aria-hidden="true"></i>
-                        </span>
-                        <span class="card-quantity">12</span>
-                        <span>
-                          <i class="fa fa-minus" aria-hidden="true"></i>
-                        </span>
-                      </div>
-                      <div class="col-sm-6 text-center card-cart">
-                        <i class="fa fa-cart-plus fa-lg" aria-hidden="true"></i>
-                        <span>Add</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="./Assets/paneer.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Mother Dairy Paneer</h5>
-                    <span class="price">
-                      <i class="fa fa-inr" aria-hidden="true"></i>
-                      <span class="card-text"></span>55</span>
-                  </div>
-                  <div class="card-footer">
-                    <div class="row">
-                      <div class="col-sm-6 text-center card-quant-col">
-                        <span>
-                          <i class="fa fa-plus" aria-hidden="true"></i>
-                        </span>
-                        <span class="card-quantity">2</span>
-                        <span>
-                          <i class="fa fa-minus" aria-hidden="true"></i>
-                        </span>
-                      </div>
-                      <div class="col-sm-6 text-center card-cart">
-                        <i class="fa fa-cart-plus fa-lg" aria-hidden="true"></i>
-                        <span>Add</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <img class="card-img-top" src="./Assets/butter.png" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Amul Butter</h5>
-                    <span class="price">
-                      <i class="fa fa-inr" aria-hidden="true"></i>
-                      <span class="card-text"></span>120</span>
-                  </div>
-                  <div class="card-footer">
-                    <div class="row">
-                      <div class="col-sm-6 text-center card-quant-col">
-                        <span>
-                          <i class="fa fa-plus" aria-hidden="true"></i>
-                        </span>
-                        <span class="card-quantity">5</span>
-                        <span>
-                          <i class="fa fa-minus" aria-hidden="true"></i>
-                        </span>
-                      </div>
-                      <div class="col-sm-6 text-center card-cart">
-                        <i class="fa fa-cart-plus fa-lg" aria-hidden="true"></i>
-                        <span>Add</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
+            <div id="cards"></div>
         </div>
       </div>
     </div>
