--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 
   <section id="main-content-area">
     <div class="row">
-      <div class="col-sm-2 master-container">
+      <div class="col-sm-3 master-container">
         <div class="master-container text-center">
           <div id="masterPane">
           </div>
@@ -123,7 +123,7 @@
     
       <div class="col-sm-9 detail-container">
         <div class="detail-pane text-center">
-            <div id="cards"></div>
+            <div class="card-decks" id="cards"></div>
         </div>
       </div>
     </div>
